--- a/tf-cluster-pipeline.yml
+++ b/tf-cluster-pipeline.yml
@@ -5,7 +5,11 @@
 
 trigger:
 - main
-
+variables:
+- name: DEV_ENVIRONMENT
+  value: dev
+- name: QA_ENVIRONMENT
+  value: qa
 pool:
   vmImage: ubuntu-latest
 
@@ -40,4 +44,39 @@ stages:
           command: 'validate'
           workingDirectory: '$(System.DefaultWorkingDirectory)/Terraform-manifest'
           allowTelemetryCollection: false
+- stage: DeployAKSCluster
+  jobs:
+    - deployment: DeployDevAksCluster
+      displayName: DeployDevAksCluster
+      pool:
+        vmImage: 'ubuntu-latest'
+      environment: $(DEV_ENVIRONMENT)
+      strategy:
+       runOnce:
+         deploy:
+           steps:
+           - task: TerraformCLI@2
+             displayName: Terraform Init
+             inputs:
+               command: 'init'
+               workingDirectory: '$(Pipeline.Workspace)/Terraform-manifests-out'
+               backendType: 'azurerm'
+               backendServiceArm: 'terraform-aks-azurerm-svc-con'
+               backendAzureRmResourceGroupName: 'rg-storage-accounts-1'
+               backendAzureRmStorageAccountName: 'tfstorageaccountbhanu'
+               backendAzureRmContainerName: 'tfstatefiles'
+               backendAzureRmKey: 'tf-cluster.tfstate'
+               allowTelemetryCollection: false
+           - task: TerraformCLI@2
+             inputs:
+               command: 'plan'
+               workingDirectory: '$(Pipeline.Workspace)/Terraform-manifests-out'
+               environmentServiceName: 'terraform-aks-azurerm-svc-con'
+               allowTelemetryCollection: true
+           - task: TerraformCLI@2
+             inputs:
+               command: 'apply'
+               workingDirectory: '$(Pipeline.Workspace)/Terraform-manifests-out'
+               environmentServiceName: 'terraform-aks-azurerm-svc-con'
+               allowTelemetryCollection: true
    
