Update tf-cluster-pipeline.yml for Azure Pipelines

--- a/tf-cluster-pipeline.yml
+++ b/tf-cluster-pipeline.yml
@@ -55,6 +55,9 @@ stages:
        runOnce:
          deploy:
            steps:
+           - task: TerraformInstaller@2
+             inputs:
+               terraformVersion: 'latest'
            - task: TerraformCLI@2
              displayName: Terraform Init
              inputs:
