--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,19 +1,82 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
 
 trigger:
 - main
 
+variables:
+- name: DEV_ENVIRONMENT
+  value: dev
+- name: QA_ENVIRONMENT
+  value: qa
+
 pool:
   vmImage: ubuntu-latest
 
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+stages:
+- stage: TerraformValidate
+  jobs:
+    - job: TerraformValidateJob
+      continueOnError: false
+      steps:
+     
+      - task: PublishPipelineArtifact@1
+        displayName: Publish Artifacts
+        inputs:
+          targetPath: '$(System.DefaultWorkingDirectory)/Terraform-manifest'
+          artifact: 'Terraform-manifest-out'
+          publishLocation: 'pipeline'
+      - task: TerraformCLI@2
+        displayName: Terraform Init
+        inputs:
+          command: 'init'
+          workingDirectory: '$(System.DefaultWorkingDirectory)/Terraform-manifest'
+          backendType: 'azurerm'
+          backendServiceArm: 'terraform-aks-azurerm-svc-con'
+          backendAzureRmResourceGroupName: 'rg-storage-accounts-1'
+          backendAzureRmStorageAccountName: 'tfstorageaccountbhanu'
+          backendAzureRmContainerName: 'tfstatefiles'
+          backendAzureRmKey: 'tf-cluster.tfstate'
+          allowTelemetryCollection: false
+      - task: TerraformCLI@2
+        displayName: Terraform Validate
+        inputs:
+          command: 'validate'
+          workingDirectory: '$(System.DefaultWorkingDirectory)/Terraform-manifest'
+          allowTelemetryCollection: false
+- stage: DeployAKSCluster
+  jobs:
+    - deployment: DeployDevAksCluster
+      displayName: DeployDevAksCluster
+      pool:
+        vmImage: 'ubuntu-latest'
+      environment: $(DEV_ENVIRONMENT)
+      strategy:
+        runOnce:
+          deploy:
+            steps:
+            
+            - task: TerraformCLI@2
+              displayName: Terraform Init
+              inputs:
+                command: 'init'
+                workingDirectory: '$(Pipeline.Workspace)/Terraform-manifest-out'
+                backendType: 'azurerm'
+                backendServiceArm: 'terraform-aks-azurerm-svc-con'
+                backendAzureRmResourceGroupName: 'rg-storage-accounts-1'
+                backendAzureRmStorageAccountName: 'tfstorageaccountbhanu'
+                backendAzureRmContainerName: 'tfstatefiles'
+                backendAzureRmKey: 'tf-cluster.tfstate'
+                allowTelemetryCollection: false
+            - task: TerraformCLI@2
+              displayName: Terraform Plan
+              inputs:
+                command: 'plan'
+                workingDirectory: '$(Pipeline.Workspace)/Terraform-manifest-out'
+                environmentServiceName: 'terraform-aks-azurerm-svc-con'
+                allowTelemetryCollection: true
+            - task: TerraformCLI@2
+              displayName: Terraform Apply
+              inputs:
+                command: 'apply'
+                workingDirectory: '$(Pipeline.Workspace)/Terraform-manifest-out'
+                environmentServiceName: 'terraform-aks-azurerm-svc-con'
+                allowTelemetryCollection: true
